CSS fixes (#261)
Prevent the main body from flowing out of the screen, and reduce the
font size a bit.

--- a/support/web/css/code.scss
+++ b/support/web/css/code.scss
@@ -15,6 +15,7 @@
 
 code, pre, .sourceCode {
   font-family: 'Julia Mono';
+  font-size: var(--code-font-size);
   font-weight: 500;
 }
 
